# MiAM_robotics

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  DockerSetup.md  Dockerfile  Makefile  README.md  RaspberryPiSetup.md  cmake_install.cmake  configure_docker.sh  miam_install_dependancies.sh  miam_setup.sh
archive/eurobot2021/DrivetrainTest/: CMakeLists.txt
eurobot2021/MainRobotCode/embedded/: CMakeLists.txt
eurobot2021/MainRobotCode/simulation/: CMakeLists.txt
eurobot2023/MainRobotCode/application/: CMakeLists.txt
eurobot2023/MainRobotCode/embedded/: CMakeLists.txt  CameraTest.cpp  cameraTest
eurobot2023/MainRobotCode/simulation/: CMakeLists.txt
eurobot2023/MainRobotCode/vision/: CMakeLists.txt
eurobot2024/MainRobotCode/pami_mock_listener/: CMakeLists.txt
eurobot2025/MainRobotCode/embedded/: CMakeLists.txt
hardware_tests/AS5045_test/: CMakeLists.txt
hardware_tests/AS5045_test/src/: TestAS5045.cpp
hardware_tests/nautilus_test/: CMakeLists.txt
hardware_tests/nautilus_test/src/: NautilusTest.cpp
hardware_tests/rmdx_test/: CMakeLists.txt
hardware_tests/rmdx_test/include/: MCP2515Driver2.h  RMDX.h
hardware_tests/rmdx_test/src/: Main.cpp  RMDXTest.cpp
hardware_tests/rplidarTester/: CMakeLists.txt
hardware_tests/rplidarTester/config/: GRPLidar.glade
hardware_tests/rplidarTester/include/: GRPLidar.h  LidarDrawing.h
hardware_tests/rplidarTester/src/: GRPLidar.cpp  LidarDrawing.cpp  Main.cpp
hardware_tests/simple_tests/: CMakeLists.txt  TestAS5048B.cpp  TestBMI088.cpp  TestINA226.cpp  TestLogger.cpp  TestMCP23008.cpp  TestMainPCB.cpp  TestPCA9635.cpp  TestServoManager.cpp  TestServoPerformance.cpp  TestSolarPanelCamera.cpp  TestSparkfunOdometry.cpp
hardware_tests/sts_servo_gui/: CMakeLists.txt
hardware_tests/sts_servo_gui/include/: MainWindow.h
hardware_tests/sts_servo_gui/src/: Main.cpp  MainWindow.cpp
hardware_tests/sts_servo_test/: CMakeLists.txt
hardware_tests/sts_servo_test/src/: sts_servo_test.cpp
main_robot_code/: CMakeLists.txt
main_robot_code/common/examples/: DHTransformExample.cpp
main_robot_code/common/src/: GameState.cpp  MotionController.cpp  MotionControllerMotorTarget.cpp  RobotGUI.cpp  RobotInterface.cpp  ThreadHandler.cpp
main_robot_code/embedded/: CMakeLists.txt
main_robot_code/embedded/include/: Robot.h
main_robot_code/embedded/src/: MainRobotMain.cpp  Robot.cpp
main_robot_code/generate_acado_solver/: CMakeLists.txt
main_robot_code/generate_acado_solver/include/: MPCParameters.h
main_robot_code/main_robot/src/: CursorAction.cpp  DropCratesAction.cpp  GrabColumnAction.cpp  GrabCratesAction.cpp  ServoManager.cpp  SmallColumnAction.cpp  Strategy.cpp  VisionHandler.cpp  arm_code.cpp  arm_code.h  dual.hpp
main_robot_code/motioncontroller_testing/: CMakeLists.txt
main_robot_code/motioncontroller_testing/config/: MainWindow.glade
main_robot_code/motioncontroller_testing/src/: Main.cpp  analyze_results.py
main_robot_code/servo_test/: CMakeLists.txt
main_robot_code/servo_test/src/: sts_servo_test.cpp
main_robot_code/simulation/: CMakeLists.txt
main_robot_code/simulation/include/: FakeMetronome.h
main_robot_code/simulation/src/: FakeMetronome.cpp  Main.cpp
miam_acado/: CMakeLists.txt  README.md
miam_acado/include/: mpc_parameterization.hpp
miam_acado/src/: astar_test.cpp  mpc_astar_table.cpp  mpc_basicPath.cpp  mpc_code_generation.cpp  mpc_code_generation_eurobot2024.cpp  mpc_roundedCorner.cpp  mpc_straightLineToPoint.cpp
miam_acado/src/generated_code/: acado_common.h  acado_qpoases_interface.hpp  acado_solver.c
miam_acado/src/mpc_solver_lib/: mpc_parameterization.cpp  mpc_parameterization.hpp  mpc_solver.cpp  mpc_solver.hpp
miam_utils/: ADAFRUIT-SPI1-00A0.dtbo  BB-PWM2-00A0.dtbo  CMakeLists.txt  Eurobot-00A0.dts  README.md  am335x-boneblack.dts  miam_utilsTemplate.pc
miam_utils/doc/: Doxyfile  DoxygenLayout.xml  Mainpage.dox  make_documentation.sh
miam_utils/include/miam_utils/: AStar.hpp  AbstractRobot.h  DatasetHandler.h  KalmanFilter.h  LogVariable.h  Logger.h  LowPass.h  Map.h  MathUtils.h  Metronome.h  PID.h  RPLidarHandler.h  RailServo.h  STSScheduler.h  STSServoManager.h  TextLogger.h  Types.h  miam_utils.h
miam_utils/log_converter/: CMakeLists.txt
miam_utils/log_converter/src/: LogConverter.cpp
miam_utils/src/: AStar.cpp  AbstractRobot.cpp  DatasetHandler.cpp  KalmanFilter.c  LogVariable.cpp  Logger.cpp  LowPass.cpp  Map.cpp  MathUtils.cpp  Metronome.cpp  PID.cpp  RPLidarHandler.cpp  TextLogger.cpp
miam_utils/src/beaglebone/: BBBGpio.c  BeagleboneCape.c
miam_utils/src/drivers/: ADNS9800Driver.c  AS5045Driver.cpp  AS5048BDriver.cpp  BMI088Driver.cpp  I2C-Wrapper.c  IMUDriver.c  IMUV3Driver.cpp  IMUV5Driver.cpp  INA226Driver.cpp  L6470Driver.cpp  RMDX.cpp  (+24 more)
miam_utils/unit/: CMakeLists.txt  CMakeLists.txt.in  kinematicsTest.cc  loggerTest.cc  mainTest.cc  mathTest.cc  unit.cc
tag_detector/: CMakeLists.txt  VisionSharedMem.h  readExample.cpp
tag_detector/src/: LibCamera.cpp  LibCamera.h  LibCameraWrapper.cpp  LibCameraWrapper.h  TagDetector.cpp  TagDetector.h  run_tag_detection.cpp
vacuum_cleaning/vacuum_brain/: CMakeLists.txt  README.md
vision/: CMakeLists.txt  log_analyzer.py  miam_visionTemplate.pc
vision/app/: calibrate_camera.cpp  camera_client.cpp  detect_markers.cpp  dummy_client.cpp  test.cpp  vision_module.cpp
vision/data/: camera_calib.xml  camera_calib_v2.xml  params.yaml  todo.txt
vision/deprecated/: camera_pose_filter.hpp
vision/docs/: build_opencv_4.5.sh  calculus.tex  draft.txt
vision/python/: plot.py
vision/scripts/: client.cpp  create_aruco_video.cpp  run_tag_detection.cpp  server.cpp  test_aruco.cpp  test_board.cpp  test_camera_solar_panels.cpp  test_fov.cpp  test_geometry.cpp  test_serialization.cpp
vision/src/: camera.cpp  camera_pose_filter.cpp  client.cpp  distortion_fisheye.cpp  distortion_radtan.cpp  module.cpp  module_deprecated.cpp  serialization.cpp  server.cpp  server_socket.cpp
vision/tests/: test_camera_pose_filter.cpp  test_gaussian_sampler.cpp  test_maths.cpp  test_pose_sampler.cpp  test_test_bench.cpp
(+807 files in other folders)
